tests/baselines/reference/augmentedTypesEnum2.errors.txt
tests/cases/compiler/augmentedTypesEnum2.ts(4,11): error TS2300: Duplicate identifier 'e1'.
tests/cases/compiler/augmentedTypesEnum2.ts(12,7): error TS2300: Duplicate identifier 'e2'.


==== tests/cases/compiler/augmentedTypesEnum2.ts (2 errors) ====
    // enum then interface
    enum e1 { One }
    
    interface e1 {
              ~~
!!! error TS2300: Duplicate identifier 'e1'.
        foo(): void;
    }
    
    // interface then enum works
    
    // enum then class
    enum e2 { One };
    class e2 { // error
          ~~
!!! error TS2300: Duplicate identifier 'e2'.
        foo() {
            return 1;
        }
    }
    
    //enum then enum - covered
    //enum then import - covered